@@ -22,7 +22,10 @@ importFrom(psych,"principal")
 importFrom(lavaan,"lavaan","cfa","standardizedSolution", "standardizedsolution", "parameterEstimates", "parameterestimates","inspect")
 importClassesFrom(lavaan,"lavaan")
 importFrom(stats,"factanal")
+importFrom(BDgraph,"phat")
 importFrom(ellipse,"ellipse")
+importFrom(corpcor,"pseudoinverse")
+importFrom(corpcor,"cor2pcor")
 importFrom(graphics,"plot","points","lines","polygon")
 importFrom(png,"readPNG")
 importFrom(jpeg,"readJPEG")
